// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NextJsTypedApiWithSwrPlugin generates correct content with custom configurations 1`] = `
"import { NextApiHandler } from \\"next\\";
import { Fetcher, SWRResponse } from \\"swr\\";
import ___pages_api__id_ from \\"../pages/api/[id]\\";
import ___pages_api_users from \\"../pages/api/users\\";


type InferNextApiHandlerResponseType<T extends NextApiHandler> =
  T extends NextApiHandler<infer U> ? U : never;

declare module \\"swr\\" {
  export interface SWRHook {

    <Error = any>(
      key: \`/api/\${string}\`,
      fetcher?: Fetcher<
        InferNextApiHandlerResponseType<typeof ___pages_api__id_>,
        \`/api/\${string}\`
      >
    ): SWRResponse<
      InferNextApiHandlerResponseType<typeof ___pages_api__id_>,
      Error
    >;

    <Error = any>(
      key: \\"/api/users\\",
      fetcher?: Fetcher<
        InferNextApiHandlerResponseType<typeof ___pages_api_users>,
        \\"/api/users\\"
      >
    ): SWRResponse<
      InferNextApiHandlerResponseType<typeof ___pages_api_users>,
      Error
    >;
  }
}
"
`;

exports[`NextJsTypedApiWithSwrPlugin generates correct content with default configurations 1`] = `
"import { NextApiHandler } from \\"next\\";
import { Fetcher, SWRResponse } from \\"swr\\";
import pages_api__id_ from \\"pages/api/[id]\\";
import pages_api_users from \\"pages/api/users\\";


type InferNextApiHandlerResponseType<T extends NextApiHandler> =
  T extends NextApiHandler<infer U> ? U : never;

declare module \\"swr\\" {
  export interface SWRHook {

    <Error = any>(
      key: \`/api/\${string}\`,
      fetcher?: Fetcher<
        InferNextApiHandlerResponseType<typeof pages_api__id_>,
        \`/api/\${string}\`
      >
    ): SWRResponse<
      InferNextApiHandlerResponseType<typeof pages_api__id_>,
      Error
    >;

    <Error = any>(
      key: \\"/api/users\\",
      fetcher?: Fetcher<
        InferNextApiHandlerResponseType<typeof pages_api_users>,
        \\"/api/users\\"
      >
    ): SWRResponse<
      InferNextApiHandlerResponseType<typeof pages_api_users>,
      Error
    >;
  }
}
"
`;
